<resources>
    <string name="app_name">Crick Info</string>
    <!-- custom -->
    <string name="fixtures">Fixtures</string>
    <string name="team">Team</string>
    <string name="player">Player</string>
    <string name="matches">Matches</string>
    <string name="match_status">Match Status</string>
    <string name="_0_0">0/0</string>
    <string name="match_notes">match _notes</string>
    <string name="vs">vs</string>
    <string name="yyyy_mm_dd">YYYY-MM-DD</string>
    <string name="t20">T20</string>
    <string name="search">Search</string>
    <string name="home">Home</string>
    <string name="news">News</string>
    <string name="player_name">Player Name</string>
    <string name="country_name">Country Name</string>
    <string name="bat_s_man">Bat\'s Man</string>
    <string name="_0">0</string>
    <string name="t20i_2023_02_16">T20I</string>
    <string name="score">score</string>
    <string name="team_squad">Team Squad</string>
    <string name="status">Status</string>
    <string name="winning">Winning Team</string>
    <string name="toss_won">Toss Won</string>
    <string name="umpire">Umpire</string>
    <string name="title">Title</string>
    <string name="match_umpire">Match Umpire</string>
    <string name="match_info">Match Info</string>
    <string name="t20i">T20I</string>
    <string name="position">Position:</string>
    <string name="personal_information">Personal Information</string>
    <string name="career">Career</string>
    <string name="date_of_birth">date_of_birth</string>
    <string name="gender">Gender:</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="batting">Batting</string>
    <string name="bowling">Bowling</string>
    <string name="style">Style</string>
    <string name="bowling_style">Bowling Style</string>
    <string name="batting_style">Batting Style</string>
    <string name="odi">ODI</string>
    <string name="test">Test</string>
    <string name="format">Format</string>
    <string name="run">Run</string>
    <string name="m">M</string>
    <string name="r">R</string>
    <string name="br">BR</string>
    <string name="sr">SR</string>
    <string name="best">Best</string>
    <string name="_100">100s</string>
    <string name="_50">50s</string>
    <string name="age">Age:</string>
    <string name="w">W</string>
    <string name="econ">Econ</string>
    <string name="_4w">4W</string>
    <string name="_5w">5W</string>
    <string name="avg">Avg</string>
    <string name="zero_pont_zero">0.0</string>
    <string name="na">: NA</string>
    <string name="team_score_card">Team Score Card</string>
    <string name="notes">Notes</string>
    <string name="man_of_match">Man Of Match</string>
    <string name="not_available">Not Available</string>
    <string name="series">Series</string>
    <string name="no_internet">No Internet</string>
    <string name="venue">Venue</string>
    <string name="city">City</string>
    <string name="winner">Winner</string>
    <string name="time">Time</string>
    <string name="date">Date</string>
    <string name="elected">Elected</string>
    <string name="team2">Team2</string>
    <string name="team1">Team1</string>
    <string name="scorecard">Scorecard</string>
    <string name="extra">Extra: NA</string>
    <string name="b">B</string>
    <string name="_4s">4s</string>
    <string name="_6s">6s</string>
    <string name="name">Name</string>
    <string name="o">O</string>
    <string name="players">Players</string>
    <string name="live">Live</string>
    <string name="cricket_news">Cricket News</string>
    <string name="see_more">See More -></string>
    <string name="please_check_your_internet_connection">Please check your internet connection.</string>
    <string name="no_connection">No Connection</string>
    <string name="info_show">:  %s</string>
    <string name="_2nd_inning">2nd Inning</string>
    <string name="_1st_inning">1st Inning</string>
    <string name="pending">Pending</string>
    <string name="player_is_not_available">PLayer is not available</string>
    <string name="first_umpire">First Umpire</string>
    <string name="second_umpire">Second Umpire</string>
    <string name="third_umpire">Third Umpire</string>
    <string name="referee">Match Referee</string>
    <string name="_na">NA</string>

</resources>