<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="130dp"
    android:layout_margin="5dp"
    android:elevation="5dp">

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/tv_format"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/t20"
            app:layout_constraintBottom_toTopOf="@id/iv_team1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <ImageView
            android:id="@+id/iv_team1"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:src="@drawable/ic_launcher_foreground"
            app:layout_constraintBottom_toTopOf="@id/tv_team1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_format"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/tv_team1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/team"
            android:textColor="@color/black"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@id/iv_team1"
            app:layout_constraintStart_toStartOf="@id/iv_team1"
            app:layout_constraintTop_toBottomOf="@id/iv_team1" />

        <TextView
            android:id="@+id/match_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="@string/match_status"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_score_team1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20sp"
            android:text="@string/_0_0"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="@id/iv_team1"
            app:layout_constraintStart_toEndOf="@id/iv_team1"
            app:layout_constraintTop_toTopOf="@id/iv_team1" />

        <TextView
            android:id="@+id/tv_vs"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20sp"
            android:text="@string/vs"
            android:textColor="@color/black"
            android:textSize="20sp"
            app:layout_constraintEnd_toStartOf="@id/tv_score_team2"
            app:layout_constraintStart_toEndOf="@id/tv_score_team1"
            app:layout_constraintTop_toTopOf="@id/tv_score_team1" />

        <TextView
            android:id="@+id/tv_score_team2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20sp"
            android:text="@string/_0_0"
            android:textSize="20sp"
            app:layout_constraintEnd_toStartOf="@id/iv_team2"
            app:layout_constraintTop_toTopOf="@id/tv_score_team1" />

        <TextView
            android:id="@+id/tv_match_notes"
            android:gravity="center"
            android:layout_width="220dp"
            android:layout_height="wrap_content"
            tools:text="@string/match_notes"
            android:layout_marginBottom="3dp"
            app:layout_constraintEnd_toStartOf="@id/iv_team2"
            app:layout_constraintStart_toEndOf="@id/iv_team1"
            app:layout_constraintBottom_toBottomOf="parent" />

        <TextView
            android:id="@+id/tv_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:text="@string/yyyy_mm_dd"
            app:layout_constraintBottom_toTopOf="@id/iv_team2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/iv_team2"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:src="@drawable/ic_launcher_foreground"
            app:layout_constraintBottom_toTopOf="@id/tv_team2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_date"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/tv_team2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/team"
            android:textColor="@color/black"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@id/iv_team2"
            app:layout_constraintStart_toStartOf="@id/iv_team2"
            app:layout_constraintTop_toBottomOf="@id/iv_team2" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>